# dotdotyew

./: .gitignore  404.html  Cargo.toml  README.md  Trunk.toml  index-47162ddba9aee007_bg.wasm  index-53ab4d7ff8d7f9ca_bg.wasm  index-afc81928ff323450.js  index-afc81928ff323450_bg.wasm  index-b9c3d5bff22519a7_bg.wasm  index-c539dbcdcaa64c85.js  index-c539dbcdcaa64c85_bg.wasm  index.html
src/: api.rs  lib.rs  poll.rs
src/component/: mod.rs  panel.rs  pure.rs
src/poll/: create.rs  mod.rs  results.rs  show.rs
static/: 404.html  index.html  package.json  wasm.d.ts  wasm_bg.wasm  wasm_bg.wasm.d.ts
