[package]
name = "dotdotyew"
version = "0.1.0"
authors = ["Shaun Bennett <shaun@scribd.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-router = "0.14.0"
yew = "0.17"
wasm-bindgen = "0.2.67"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = true
opt-level = 's'
# For wasm-snip
debug = true
